# GarageFlow

./: Dockerfile  README.md  celery_app.py  database.py  docker-compose.yml  main.py  pyproject.toml  security.py
alembic/: env.py
alembic/versions/: a1ffef03a01b_baseline_schema.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/forms/: CrudCard.jsx
frontend/src/components/ui/: InputField.jsx  StatCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useCustomerDashboard.js  useDashboardData.js
frontend/src/pages/: CustomerLoginPage.jsx  CustomerRegisterPage.jsx  DashboardPage.jsx  LandingPage.jsx  UserLoginPage.jsx  UserRegisterPage.jsx
frontend/src/services/: apiClient.js  authService.js  domainService.js
frontend/src/utils/: error.js
models/: __init__.py  booking.py  customer.py  garage.py  invoice.py  invoice_item.py  job.py  notification.py  user.py  vehicle.py
routes/: route_auth.py  route_booking.py  route_customer.py  route_garage.py  route_invoice.py  route_user.py  route_vehicle.py
schemas/: auth.py  booking.py  customer.py  garage.py  user.py  vehicle.py
services/: cache.py  invoice_pdf.py
tasks/: invoice_tasks.py
test/: test_auth.py  test_booking.py  test_customer.py  test_garage.py  test_invoice.py  test_user.py  test_vehicle.py
