[project]
name = "garageflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "xhtml2pdf>=0.2.17",
]
